--- a/www/templates/auth/signup.html
+++ b/www/templates/auth/signup.html
@@ -24,7 +24,7 @@
                   <input class="signup-roofpik" type="number" placeholder="Mobile number" ng-model="user.mobileNum">
                </label>
                <label class="item item-input ion-bonfire">
-                  <input class="signup-roofpik" type="text" placeholder="Referral Code" ng-model="user.referralCode">
+                  <input class="signup-roofpik" type="text" placeholder="Referral Code (optional)" ng-model="user.referralCode">
                </label>
             </div>
             <button class="button button-block" id="bluebgcolor" ng-click="signup()">Signup</button>
