--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -1,9 +1,9 @@
 <ion-view id="home-page" cache-view="false">
-<style>
-.title-left{
-    display: none !important;
-}
-</style>
+    <style>
+    .title-left {
+        display: none !important;
+    }
+    </style>
     <ion-content has-header="true">
         <div class="list top-search" id="searchProjectBar">
             <label class="item item-input" id="projectSearchLabel">
@@ -11,15 +11,22 @@
                 <i class="icon ion-android-search placeholder-icon home-page-search-icon"></i>
             </label>
         </div>
-        <div class="scrollBar">
+        <ion-slide-box style="height:120px;">
+            <ion-slide>
+                <img src="img/home/key-per.png" class="SliderImg" id="imgOne" ng-click="goToRoofpik()">
+            </ion-slide>
+            <ion-slide>
+                <img src="img/home/girl-child-edu.jpg" class="SliderImg" ng-click="goToRefer()">
+            </ion-slide>
+        </ion-slide-box>
+        <!--    <div class="scrollBar">
             <ion-scroll direction="x" style="width: 220%">
                 <div style="width: 140%; height:auto; display:inline-block;padding:6px 0px 0px 0px;">
-                    <img src="img/home/key-running-ad.jpg" class="SliderImg" id="imgOne" ng-click="goToRoofpik()">
+                    <img src="img/home/key-per.png" class="SliderImg" id="imgOne" ng-click="goToRoofpik()">
                     <img src="img/home/girl-child-edu.jpg" class="SliderImg" ng-click="goToRefer()">
-                    </div>
-                
+                </div>
             </ion-scroll>
-        </div>
+        </div> -->
         <div class="reviewNearBy">
             <button class="button icon-right button-assertive" id="orangebgcolor" ng-click="neighbourhoodRoute()">BeeSocial<img src="img/home/beesocial.png" width=25 height=25/></button>
             <button class="button icon-right button-calm bluebgcolor" ng-click="openNearby()">Nearby<img src="img/home/nearby.png" width=25 height=25/></button>
@@ -42,11 +49,11 @@
         <div class="MenuItems">
             <div class="row" ng-click="goToProjectSearch(2)">
                 <div class="col">
-                    <img src="img/home/write-review.png"/>
+                    <img src="img/home/write-review.png" />
                 </div>
                 <div class="col col-text">
                     <div class="menu-heading">
-                        Write Review
+                        Write a Review
                     </div>
                     <div class="menu-text">
                         Read and write reviews on India's first reviewing platform for real estate.
@@ -54,11 +61,11 @@
                 </div>
             </div>
         </div>
-        <div class="MenuItems refer-friend" >
+        <div class="MenuItems refer-friend">
             <div class="row" ng-click="goToRefer()">
                 <div class="col col-text">
                     <div class="menu-heading">
-                        Refer A Friend
+                        Refer a Friend
                     </div>
                     <div class="menu-text">
                         Get friends and family to find the best property options by downloading our app.
