--- a/www/templates/reviews/locality-review.html
+++ b/www/templates/reviews/locality-review.html
@@ -39,17 +39,28 @@ transform: translateZ(0);
 				</div>
 			</div>
 			<div class="review-title display-style">
-				<p  id="row-title">Review Title</p>
+				<p id="row-title">Review Title</p>
 				<label class="item item-input item-stacked-label">
 					<input type="text" ng-model="review.reviewTitle">
 				</label>
 			</div>
 			<div class="project-review display-style">
-				<p  id="row-title">Write a review</p>
+				<p id="row-title">Write a review</p>
 				<label class="item item-input">
 	            	<textarea rows="8" cols="50"  placeholder="Type here(Optional)" ng-model="review.review" required></textarea>
 	            </label>
 			</div>
+
+			<div class="display-style">
+				<p id="row-title">Do you have following close by:</p>
+				<div class="row" id="closeby">
+					<div class="col" ng-click="selectCloseby(item.id, $index)" ng-repeat="item in closeBy">
+						<img ng-src="{{item.imgsrc}}" class="{{item.id}}"/>
+						<p>{{item.name}}</p>
+					</div>
+				</div>
+			</div>
+
 			<div class="display-style">
 				<div class="row">
 					<p id="row-title">How would you rate the following?</p>
